--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -20,18 +20,10 @@ foo:
 
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: /docs/quick-start-guide/
-  - title: "About"
-    url: /about/
-  - title: "Sample Posts"
-    url: /year-archive/
-  - title: "Sample Collections"
-    url: /collection-archive/
-  - title: "Terms &amp; Privacy Policy"
-    url: /terms/
-
-
+  - title: "카테고리"
+    url: /categories/ 
+  - title: "태그"
+    url: /tags/ 
 # documentation links
 docs:
   - title: Getting Started
