--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,14 @@
 # main links
 main:
-  - title: "Category"
+  - title: "카테고리"
     url: /categories/
-  - title: "Tag"
+  - title: "태그"
     url: /tags/
-  - title: "Search"
+  - title: "연도별 검색"
+    url: /year-archive/
+  - title: "연도별 검색(그리드)"
+    url: /year-archive-grid/
+  - title: "검색"
     url: /search/
 
 docs:
