--- a/_config.yml
+++ b/_config.yml
@@ -12,13 +12,13 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "ko-KR"
 title                    : "차가운핫초코 노트"
 title_separator          : "|"
-subtitle                 : "의무적으로 하는 운동은 몸에 해가 되지 않는다. 그러나 강제로 습득한 지식은 마음에 남지 않는다."
+subtitle                 : "강제로 습득한 지식은 마음에 남지 않는다"
 name                     : "IHChoco"
 description              : "An amazing website."
 url                      : "https://ihchoco.github.io"
