--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 locale                   : "ko-KR"
 title                    : "차가운핫초코 노트"
 title_separator          : "|"
-subtitle                 : "강제로 습득한 지식은 마음에 남지 않는다"
+subtitle                 : "걸어봐 위엄 like a lion"
 name                     : "IHChoco"
 description              : "An amazing website."
 url                      : "https://ihchoco.github.io"
