--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 locale                   : "ko-KR"
 title                    : "차가운핫초코 노트"
 title_separator          : "|"
-subtitle                 : "걸어봐 위엄 like a lion"
+subtitle                 : "걸어봐 위엄 like a lion 눈빛엔 거대한 desire"
 name                     : "IHChoco"
 description              : "An amazing website."
 url                      : "https://ihchoco.github.io"
