--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "차가운핫초코 노트"
+title                    : "Back-End Developer's blog"
 title_separator          : "|"
-subtitle                 : "걸어봐 위엄 like a lion 눈빛엔 거대한 desire"
+subtitle                 : "REST API 커뮤니케이션, JPA 데이터베이스 관리, DDD 복잡한 도메인 단순화"
 name                     : "IHChoco"
 description              : "An amazing website."
 url                      : "https://ihchoco.github.io"
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "차가운핫초코"
   avatar           : "/images/profile.jpeg"
-  bio              : "Keep It Simple Stupid"
+  bio              : "Back-End Developer's blog"
   location         : "South Korea"
   email            :
   links:
